--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http:
+  json_annotation:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner:
+  json_serializable:
   
 
 # For information on the generic Dart part of this file, see the
